Attempting to fix smooth scrolling on iOS.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,11 +16,13 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    scroll-behavior: inherit;
 }
 
 html {
     font-size: 100%;
     scroll-behavior: smooth;
+    -webkit-overflow-scrolling: touch;
     overflow-x: hidden;
 }
 
